--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   dio: ^5.4.2+1
   get_it: ^7.6.7
+  image_network: ^2.5.6
 
 
   # The following adds the Cupertino Icons font to your application.
