--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   dio: ^5.4.2+1
   get_it: ^7.6.7
   image_network: ^2.5.6
+  mask_text_input_formatter: ^2.9.0
 
 
   # The following adds the Cupertino Icons font to your application.
