--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,17 +24,18 @@ dependencies:
   image_network: ^2.5.6
   mask_text_input_formatter: ^2.9.0
   json_annotation: ^4.8.1
-  auto_route: ^8.0.3
+
   flutter_bloc: ^8.1.4
 
   cupertino_icons: ^1.0.6
   http: ^1.2.1
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   json_serializable: ^6.6.0
   flutter_test:
     sdk: flutter
-  auto_route_generator: ^8.0.0
+
   build_runner: ^2.4.9
 
   
